--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+		<javafx.jmods.path></javafx.jmods.path>
 	</properties>
 	<dependencies>
 		<!-- Spring (desktop app uses Spring for DI + JPA services/repositories) -->
@@ -175,22 +176,71 @@
 				</configuration>
 			</plugin>
 
-			<!-- Native packaging (runtime image + installers) -->
+			<!-- Prepare dependencies for jpackage -->
 			<plugin>
-				<groupId>org.beryx</groupId>
-				<artifactId>badass-jlink-plugin</artifactId>
-				<version>3.0.1</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-runtime-deps</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<includeScope>runtime</includeScope>
+							<outputDirectory>${project.build.directory}/jpackage</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- Copy the application jar into the jpackage input directory -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-app-jar</id>
+						<phase>package</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<target>
+								<copy file="${project.build.directory}/${project.build.finalName}.jar"
+									todir="${project.build.directory}/jpackage" />
+							</target>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- Native packaging (jpackage) -->
+			<plugin>
+				<groupId>org.panteleyev</groupId>
+				<artifactId>jpackage-maven-plugin</artifactId>
+				<version>1.7.1</version>
 				<configuration>
+					<name>LIMS</name>
+					<appVersion>${project.version}</appVersion>
+					<destination>${project.build.directory}</destination>
+					<input>${project.build.directory}/jpackage</input>
+					<mainJar>${project.build.finalName}.jar</mainJar>
 					<mainClass>com.qdc.lims.DesktopApplication</mainClass>
-					<launcher>lims</launcher>
-					<jpackage>
-						<imageName>LIMS</imageName>
-						<appVersion>${project.version}</appVersion>
-					</jpackage>
+					<modulePaths>
+						<path>${javafx.jmods.path}</path>
+					</modulePaths>
+					<addModules>
+						<module>javafx.controls</module>
+						<module>javafx.fxml</module>
+						<module>javafx.graphics</module>
+					</addModules>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+
 
 	<profiles>
 		<profile>
