Change the DB name for production deliverable, add script file to .gitignor

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 # --- PostgreSQL Configuration (Production) ---
-spring.datasource.url=jdbc:postgresql://localhost:5432/qdc_lims
+spring.datasource.url=jdbc:postgresql://localhost:5432/lims_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
