--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ logging.level.org.hibernate.SQL=WARN
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
 
 # Log to file (uses AppPaths for location)
-logging.file.name=${user.home}/Library/Application Support/LIMS/Logs/lims.log
+logging.file.name=${lims.log.path:${user.home}/AppData/Roaming/LIMS/Logs/lims.log}
 logging.logback.rollingpolicy.max-file-size=10MB
 logging.logback.rollingpolicy.max-history=7
 
