--- a/pom.xml
+++ b/pom.xml
@@ -209,7 +209,7 @@
 						</goals>
 						<configuration>
 							<target>
-								<copy file="${project.build.directory}/${project.build.finalName}.jar"
+								<copy file="${project.build.directory}/${project.build.finalName}-boot.jar"
 									todir="${project.build.directory}/jpackage" />
 							</target>
 						</configuration>
@@ -227,8 +227,8 @@
 					<appVersion>${project.version}</appVersion>
 					<destination>${project.build.directory}</destination>
 					<input>${project.build.directory}/jpackage</input>
-					<mainJar>${project.build.finalName}.jar</mainJar>
-					<mainClass>com.qdc.lims.DesktopApplication</mainClass>
+					<mainJar>${project.build.finalName}-boot.jar</mainJar>
+					<mainClass>org.springframework.boot.loader.launch.JarLauncher</mainClass>
 					<modulePaths>
 						<path>${javafx.jmods.path}</path>
 					</modulePaths>
