--- a/pom.xml
+++ b/pom.xml
@@ -159,7 +159,6 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<classifier>boot</classifier>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
@@ -216,7 +215,7 @@
 						</goals>
 						<configuration>
 							<target>
-								<copy file="${project.build.directory}/${project.build.finalName}-boot.jar"
+								<copy file="${project.build.directory}/${project.build.finalName}.jar"
 									todir="${project.build.directory}/jpackage" />
 							</target>
 						</configuration>
@@ -234,7 +233,7 @@
 					<appVersion>${project.version}</appVersion>
 					<destination>${project.build.directory}</destination>
 					<input>${project.build.directory}/jpackage</input>
-					<mainJar>${project.build.finalName}-boot.jar</mainJar>
+					<mainJar>${project.build.finalName}.jar</mainJar>
 					<mainClass>org.springframework.boot.loader.launch.JarLauncher</mainClass>
 					<modulePaths>
 						<path>${javafx.jmods.path}</path>
