--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,9 +41,13 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.ser
 # Session timeout duration in minutes when enabled
 qdc.session.timeout=30
 
-# Master data seeding (first run only)
-qdc.seed.master.enabled=true
+# Master data seeding (disabled by default for manual setup)
+qdc.seed.master.enabled=false
 qdc.seed.master.location=classpath:seed/master-data.json
+
+# Dev/test seeders (disabled by default; enable only when demo data is needed)
+qdc.seed.dev.enabled=false
+qdc.seed.financial.enabled=false
 
 # Backup settings
 qdc.backup.auto-enabled=false
